--- a/DreamTeller.xcodeproj/xcshareddata/xcschemes/DreamTeller.xcscheme
+++ b/DreamTeller.xcodeproj/xcshareddata/xcschemes/DreamTeller.xcscheme
@@ -76,8 +76,8 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "${SRCROOT}"
-            value = "/Users/katerynapavliukova/Developer/DreamTeller"
+            key = "IDEPreferLogStreaming"
+            value = "YES"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
